# swagger.json
@@ -10,6 +10,14 @@
   "schemes": [
     "http"
   ],
+  "securityDefinitions": {
+    "bearerAuth": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "scheme": "bearer",
+      "in": "header"
+    }
+  },
   "paths": {
     "/login": {
       "post": {
@@ -87,7 +95,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "userName": {
+                "username": {
                   "example": "any"
                 },
                 "title": {
@@ -100,6 +108,9 @@
                   "example": "any"
                 },
                 "reviewSummary": {
+                  "example": "any"
+                },
+                "userId": {
                   "example": "any"
                 }
               }
@@ -142,6 +153,9 @@
                   "example": "any"
                 },
                 "reviewSummary": {
+                  "example": "any"
+                },
+                "userId": {
                   "example": "any"
                 }
               }
@@ -219,5 +233,10 @@
   "license": {
     "name": "Apache 2.0",
     "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-  }
+  },
+  "security": [
+    {
+      "bearerAuth": []
+    }
+  ]
 }
